--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "old-world-builder",
-  "version": "1.11.3",
+  "name": "warhammer-fantasy-builder",
+  "version": "0.1.0",
   "author": "Nico Thiebes",
   "homepage": "https://old-world-builder.com",
   "private": true,
@@ -38,7 +38,7 @@
     "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
-    "eslint": "^7.11.0"
+    "eslint": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
